Completed up to 1.32 (Lab 2)

--- a/index.html
+++ b/index.html
@@ -1,13 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSD112 - Noah Strum</title>
-    <!-- Great work! -->
-</head>
-<body>
-    Hello, World!
-</body>
+  </head>
+  <body>
+    <div class="width-warp">
+      <header id="top">
+        <nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="links.html">Links</a></li>
+            <li><a href="glossary.html">Glossary</a></li>
+          </ul>
+        </nav>
+      </header>
+      <main>
+        <h1>Welcome to Noah Strum's Website!</h1>
+        <p>
+          My name is Noah Strum, and I was born and raised in Sault Ste. Marie
+          Ontario. I’m currently going to school for Computer Programming at
+          Sault College. The reason I chose Computer Programming was because I
+          am very interested in it. My high school Computer Programming teacher
+          also said I should take this program because I have talent.
+        </p>
+        <p>
+          In my spare time I enjoy playing video games and camping. My favorite
+          video game right now is Ark: Survival Evolved and Call of Duty
+          Warzone. I have a dog named Leo; he is a German Shepherd Doberman mix.
+          I have also been working part time for the last two years at subway.
+        </p>
+        <h2>My Favourite Things</h2>
+        <a href="https://www.tesla.com/">
+          <img src="/images/logo.jpg" alt="Tesla Logo" />
+        </a>
+        <h3>Video Games</h3>
+        <ol>
+          <li>NHL 20</li>
+          <li>Grand Theft Auto 5</li>
+          <li>L.A. Noire</li>
+        </ol>
+        <h3>Haiku</h3>
+        <p>
+          <cite>
+            Everything I touch<br />
+            with tenderness, alas,<br />
+            pricks like a bramble.<br />
+            by</cite>
+          <span class="author">Kobayashi Issa</span>
+        </p>
+      </main>
+      <footer></footer>
+      <a href="#id" title="Back to top">◤</a>
+    </div>
+  </body>
 </html>
