--- a/index.html
+++ b/index.html
@@ -4,7 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Noah Strum" />
+    <meta
+      name="description"
+      content="Noah Strum's CSD112 front page of website" />
     <title>CSD112 - Noah Strum</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+    <link rel="manifest" href="site.webmanifest" />
+    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <!--Found Me!-->
   </head>
   <body>
     <div class="width-warp">
@@ -24,9 +37,7 @@
           Ontario. I’m currently going to school for Computer Programming at
           Sault College. The reason I chose Computer Programming was because I
           am very interested in it. My high school Computer Programming teacher
-          also said I should take this program because I have talent.
-        </p>
-        <p>
+          also said I should take this program because I have talent. <br />
           In my spare time I enjoy playing video games and camping. My favorite
           video game right now is Ark: Survival Evolved and Call of Duty
           Warzone. I have a dog named Leo; he is a German Shepherd Doberman mix.
@@ -34,7 +45,7 @@
         </p>
         <h2>My Favourite Things</h2>
         <a href="https://www.tesla.com/">
-          <img src="/images/logo.jpg" alt="Tesla Logo" />
+          <img src="images/logo.jpg" alt="Tesla Logo" />
         </a>
         <h3>Video Games</h3>
         <ol>
@@ -44,15 +55,24 @@
         </ol>
         <h3>Haiku</h3>
         <p>
-          <cite>
-            Everything I touch<br />
-            with tenderness, alas,<br />
-            pricks like a bramble.<br />
-            by</cite>
-          <span class="author">Kobayashi Issa</span>
+          Everything I touch<br />
+          with tenderness, alas,<br />
+          pricks like a bramble.<br />
+          <cite>by <span class="author">Kobayashi Issa</span></cite>
         </p>
       </main>
-      <footer></footer>
+      <footer>
+        <hr />
+        <blockquote>
+          "The quickest way to double your money is to fold it over and put it
+          back in your pocket."<br /><cite>&#8212;<span class="author">Will Rogers</span></cite>
+        </blockquote>
+        <p>
+          &#169; 2020
+          <a href="mailto:21027619@saultcollege.ca?subject=Message%20from%20CSD120%20Website">
+            Noah Strum</a>
+        </p>
+      </footer>
       <a href="#id" title="Back to top">◤</a>
     </div>
   </body>
