--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!--Found Me!-->
   </head>
   <body>
-    <div class="width-warp">
+    <div class="width-wrap">
       <header id="top">
         <nav>
           <ul>
@@ -37,7 +37,8 @@
           Ontario. I’m currently going to school for Computer Programming at
           Sault College. The reason I chose Computer Programming was because I
           am very interested in it. My high school Computer Programming teacher
-          also said I should take this program because I have talent. <br />
+          also said I should take this program because I have talent.</p>
+        <p>
           In my spare time I enjoy playing video games and camping. My favorite
           video game right now is Ark: Survival Evolved and Call of Duty
           Warzone. I have a dog named Leo; he is a German Shepherd Doberman mix.
@@ -73,7 +74,7 @@
             Noah Strum</a>
         </p>
       </footer>
-      <a href="#id" title="Back to top">◤</a>
+      <a href="#top" title="Back to top">◤</a>
     </div>
   </body>
 </html>
