--- a/links.html
+++ b/links.html
@@ -65,7 +65,7 @@
           >
         </p>
       </footer>
-      <a href="#id" title="Back to top">◤</a>
+      <a href="#top" title="Back to top">◤</a>
     </div>
   </body>
 </html>
