--- a/glossary.html
+++ b/glossary.html
@@ -74,7 +74,7 @@
           >
         </p>
       </footer>
-      <a href="#id" title="Back to top">◤</a>
+      <a href="#top" title="Back to top">◤</a>
     </div>
   </body>
 </html>
