--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
       </header>
       <main>
         <h1>Welcome to Noah Strum's Website!</h1>
+        <a href="images/my-dog.jpg">
+          <img src="images/my-dog-150w.jpg" alt="My dog walking"
+          sizes="(max-width:500px) 150px, 300px"
+          srcset="images/my-dog-150w.jpg 150w, images/my-dog-300w.jpg 300w">
+        </a>
         <p>
           My name is Noah Strum, and I was born and raised in Sault Ste. Marie
           Ontario. I’m currently going to school for Computer Programming at
@@ -45,9 +50,11 @@
           I have also been working part time for the last two years at subway.
         </p>
         <h2>My Favourite Things</h2>
-        <a href="https://www.tesla.com/">
-          <img src="images/logo.jpg" alt="Tesla Logo" />
-        </a>
+          <a href="https://www.tesla.com/"></a>
+        <figure>
+          <img src="images/tesla-logo.jpg" alt="Tesla Logo" />
+          <figcaption>Tesla Logo</figcaption>
+        </figure>
         <h3>Video Games</h3>
         <ol>
           <li>NHL 20</li>
@@ -73,6 +80,11 @@
           <a href="mailto:21027619@saultcollege.ca?subject=Message%20from%20CSD120%20Website">
             Noah Strum</a>
         </p>
+        <picture>
+          <source type="image/svg" srcset="images/sc-logo.svg">
+          <img src="images/sc-logo.png" alt="Sault College logo"
+          srcset="images/sc-logo.png, images/sc-logo@1.5x 1.5x, images/sc-logo@2x 2x">
+        </picture>
       </footer>
       <a href="#top" title="Back to top">◤</a>
     </div>
