--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="author" content="Noah Strum" />
     <meta
       name="description"
-      content="Noah Strum's CSD112 front page of website" />
+      content="Noah Strum's CSD112 front page of website"
+    />
     <title>CSD112 - Noah Strum</title>
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
@@ -16,7 +17,7 @@
     <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <!--Found Me!-->
   </head>
   <body>
@@ -33,16 +34,19 @@
       <main>
         <h1>Welcome to Noah Strum's Website!</h1>
         <a href="images/my-dog.jpg">
-          <img src="images/my-dog-150w.jpg" alt="My dog walking"
-          sizes="(max-width:500px) 150px, 300px"
-          srcset="images/my-dog-150w.jpg 150w, images/my-dog-300w.jpg 300w">
+          <img
+            src="images/my-dog-150w.jpg"
+            alt="My dog walking"
+            sizes="(max-width:500px) 150px, 300px"
+            srcset="images/my-dog-150w.jpg 150w, images/my-dog-300w.jpg 300w"/>
         </a>
         <p>
           My name is Noah Strum, and I was born and raised in Sault Ste. Marie
           Ontario. I’m currently going to school for Computer Programming at
           Sault College. The reason I chose Computer Programming was because I
           am very interested in it. My high school Computer Programming teacher
-          also said I should take this program because I have talent.</p>
+          also said I should take this program because I have talent.
+        </p>
         <p>
           In my spare time I enjoy playing video games and camping. My favorite
           video game right now is Ark: Survival Evolved and Call of Duty
@@ -50,7 +54,7 @@
           I have also been working part time for the last two years at subway.
         </p>
         <h2>My Favourite Things</h2>
-          <a href="https://www.tesla.com/"></a>
+        <a href="https://www.tesla.com/"></a>
         <figure>
           <img src="images/tesla-logo.jpg" alt="Tesla Logo" />
           <figcaption>Tesla Logo</figcaption>
@@ -68,12 +72,19 @@
           pricks like a bramble.<br />
           <cite>by <span class="author">Kobayashi Issa</span></cite>
         </p>
+        <h3>Public Domain Audiobook</h3>
+        <audio src="http://www.archive.org/download/mozartsyouth_2106_librivox/mozartsyouth_02_hoffmann_64kb.mp3" controls>
+        <a href="https://librivox.org/author/16108?primary_key=16108&search_category=author&search_page=1&search_form=get_results">Audio book Download</a>
+        </audio>
+        <h3>Youtube Video</h3>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/ehZePNP_w4I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </main>
       <footer>
         <hr />
         <blockquote>
           "The quickest way to double your money is to fold it over and put it
-          back in your pocket."<br /><cite>&#8212;<span class="author">Will Rogers</span></cite>
+          back in your pocket."<br /><cite
+            >&#8212;<span class="author">Will Rogers</span></cite>
         </blockquote>
         <p>
           &#169; 2020
@@ -81,9 +92,15 @@
             Noah Strum</a>
         </p>
         <picture>
-          <source type="image/svg" srcset="images/sc-logo.svg">
-          <img src="images/sc-logo.png" alt="Sault College logo"
-          srcset="images/sc-logo.png, images/sc-logo@1.5x 1.5x, images/sc-logo@2x 2x">
+          <source type="image/svg+xml" srcset="images/sc-logo.svg" />
+          <img
+            src="images/sc-logo.png"
+            alt="Sault College logo"
+            srcset="
+              images/sc-logo.png,
+              images/sc-logo@1.5x 1.5x,
+              images/sc-logo@2x 2x"
+            width="70"/>
         </picture>
       </footer>
       <a href="#top" title="Back to top">◤</a>
