--- a/index.html
+++ b/index.html
@@ -53,6 +53,24 @@
           Warzone. I have a dog named Leo; he is a German Shepherd Doberman mix.
           I have also been working part time for the last two years at subway.
         </p>
+        <table>
+          <caption>Table 1. Current Courses</caption>
+          <thead>
+          <tr><th rowspan="2">Term</th> <th colspan="3">Course</th></tr>
+          <tr><th>Code</th><th>Name</th><th>Hrs/Week</th></tr>
+          </thead>
+          <tbody>
+          <tr><th rowspan="6">Fall</th><td>CSD111</td><td>Computing Environments</td> <td>3</td></tr>
+          <tr><td>CSD112</td><td>Intro to Web Development</td><td>4</td></tr>
+          <tr><td>MTH123</td><td>Computer Math</td><td>3</td></tr>
+          <tr><td>TNY130</td><td>Technology/Society</td><td>2</td></tr>
+          <tr><td>CSD110</td><td>Intro to Programming</td><td>4</td></tr>
+          <tr><td>CMM115</td><td>Communications 1</td><td>2</td></tr>
+          </tbody>
+          <tfoot>
+          <tr><th colspan="3">Total</th><td>18</td></tr>  
+          </tfoot>
+        </table>
         <h2>My Favourite Things</h2>
         <a href="https://www.tesla.com/"></a>
         <figure>
