--- a/survey.html
+++ b/survey.html
@@ -67,7 +67,7 @@
               >Which bear is best?
               <abbr title="required" aria-label="required">*</abbr></label>
             <select name="best_bear" id="best_bear">
-              <option value="blank" selected>&nbsp;</option>
+              <option value="" selected>&nbsp;</option>
               <option value="black">Black</option>
               <option value="brown">Brown</option>
               <option value="care">Care</option>
