--- a/survey.html
+++ b/survey.html
@@ -47,7 +47,7 @@
             <label for="email_field"
               >What is your email?
               <abbr title="required" aria-label="required">*</abbr></label>
-            <input id="email_field" type="email" name="email_field" />
+            <input id="email_field" type="email" name="email_field" required/>
           </p>
           <p>
             <label for="best_whole_number"
@@ -56,7 +56,7 @@
               id="best_whole_number"
               type="number"
               name="best_whole_number"
-              min="0"/>
+              min="1"/>
           </p>
           <p>
             <label for="best_day">Which day is best?</label>
@@ -66,7 +66,7 @@
             <label for="best_bear"
               >Which bear is best?
               <abbr title="required" aria-label="required">*</abbr></label>
-            <select name="best_bear" id="best_bear">
+            <select name="best_bear" id="best_bear" required>
               <option value="" selected>&nbsp;</option>
               <option value="black">Black</option>
               <option value="brown">Brown</option>
@@ -108,7 +108,7 @@
               placeholder="Enter the correct answer here">
             </textarea>
           </p>
-          <button type="submit">Send</button>
+          <p><button type="submit">Send</button></p>
         </form>
       </main>
       <footer>
