--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/main.css">
     <!--Found Me!-->
   </head>
   <body>
@@ -99,7 +101,7 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/ehZePNP_w4I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </main>
       <footer>
-        <hr />
+        <hr>
         <blockquote>
           "The quickest way to double your money is to fold it over and put it
           back in your pocket."<br /><cite
