--- a/survey.html
+++ b/survey.html
@@ -18,6 +18,8 @@
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/main.css">
     <!--Found Me!-->
   </head>
   <body>
@@ -89,12 +91,7 @@
               </li>
               <li>
                 <label for="?">None of your business</label>
-                <input
-                  type="radio"
-                  name="radio_buttons"
-                  value="?"
-                  id="?"
-                  checked/>
+                <input type="radio" name="radio_buttons" value="?" id="?"checked />
               </li>
             </ul>
           </fieldset>
