--- a/survey.html
+++ b/survey.html
@@ -30,6 +30,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="links.html">Links</a></li>
             <li><a href="glossary.html">Glossary</a></li>
+            <li><a href="survey.html">Survey</a></li>
           </ul>
         </nav>
       </header>
@@ -54,11 +55,7 @@
           <p>
             <label for="best_whole_number"
               >Which whole number is the best?</label>
-            <input
-              id="best_whole_number"
-              type="number"
-              name="best_whole_number"
-              min="1"/>
+            <input id="best_whole_number" type="number" name="best_whole_number" min="1"/>
           </p>
           <p>
             <label for="best_day">Which day is best?</label>
@@ -82,27 +79,22 @@
             <legend>Do you like radio buttons?</legend>
             <ul>
               <li>
-                <label for="yes">Yes</label>
                 <input type="radio" name="radio_buttons" value="yes" id="yes" />
+                <label for="yes">Yes</label>
               </li>
               <li>
-                <label for="no">No</label>
                 <input type="radio" name="radio_buttons" value="no" id="no" />
+                <label for="no">No</label>
               </li>
               <li>
-                <label for="?">None of your business</label>
                 <input type="radio" name="radio_buttons" value="?" id="?"checked />
+                <label for="?">None of your business</label>
               </li>
             </ul>
           </fieldset>
           <p>
             <label for="life_meaning">What is the meaning of life?</label>
-            <textarea
-              name="life_meaning"
-              id="life_meaning"
-              cols="50"
-              rows="5"
-              placeholder="Enter the correct answer here">
+            <textarea name="life_meaning" d="life_meaning" cols="50" rows="5" placeholder="Enter the correct answer here">
             </textarea>
           </p>
           <p><button type="submit">Send</button></p>
