--- a/index.html
+++ b/index.html
@@ -18,8 +18,22 @@
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/normalize.css" />
+    <link rel="stylesheet" href="styles/main.css" />
+    <!--Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Righteous&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap"
+      rel="stylesheet"
+    />
     <!--Found Me!-->
   </head>
   <body>
@@ -41,7 +55,8 @@
             src="images/my-dog-150w.jpg"
             alt="My dog walking"
             sizes="(max-width:500px) 150px, 300px"
-            srcset="images/my-dog-150w.jpg 150w, images/my-dog-300w.jpg 300w"/>
+            srcset="images/my-dog-150w.jpg 150w, images/my-dog-300w.jpg 300w"
+          />
         </a>
         <p>
           My name is Noah Strum, and I was born and raised in Sault Ste. Marie
@@ -57,21 +72,58 @@
           I have also been working part time for the last two years at subway.
         </p>
         <table>
-          <caption>Table 1. Current Courses</caption>
+          <caption>
+            Table 1. Current Courses
+          </caption>
           <thead>
-          <tr><th rowspan="2" scope="col">Term</th> <th colspan="3" scope="colgroup">Course</th></tr>
-          <tr><th scope="col">Code</th><th scope="col">Name</th><th scope="col">Hrs/Week</th></tr>
+            <tr>
+              <th rowspan="2" scope="col">Term</th>
+              <th colspan="3" scope="colgroup">Course</th>
+            </tr>
+            <tr>
+              <th scope="col">Code</th>
+              <th scope="col">Name</th>
+              <th scope="col">Hrs/Week</th>
+            </tr>
           </thead>
           <tbody>
-          <tr><th rowspan="6" scope="rowgroup">Fall</th><td>CSD111</td><td>Computing Environments</td> <td>3</td></tr>
-          <tr><td>CSD112</td><td>Intro to Web Development</td><td>4</td></tr>
-          <tr><td>MTH123</td><td>Computer Math</td><td>3</td></tr>
-          <tr><td>TNY130</td><td>Technology/Society</td><td>2</td></tr>
-          <tr><td>CSD110</td><td>Intro to Programming</td><td>4</td></tr>
-          <tr><td>CMM115</td><td>Communications 1</td><td>2</td></tr>
+            <tr>
+              <th rowspan="6" scope="rowgroup">Fall</th>
+              <td>CSD111</td>
+              <td>Computing Environments</td>
+              <td>3</td>
+            </tr>
+            <tr>
+              <td>CSD112</td>
+              <td>Intro to Web Development</td>
+              <td>4</td>
+            </tr>
+            <tr>
+              <td>MTH123</td>
+              <td>Computer Math</td>
+              <td>3</td>
+            </tr>
+            <tr>
+              <td>TNY130</td>
+              <td>Technology/Society</td>
+              <td>2</td>
+            </tr>
+            <tr>
+              <td>CSD110</td>
+              <td>Intro to Programming</td>
+              <td>4</td>
+            </tr>
+            <tr>
+              <td>CMM115</td>
+              <td>Communications 1</td>
+              <td>2</td>
+            </tr>
           </tbody>
           <tfoot>
-          <tr><th colspan="3" scope="row">Total</th><td>18</td></tr>  
+            <tr>
+              <th colspan="3" scope="row">Total</th>
+              <td>18</td>
+            </tr>
           </tfoot>
         </table>
         <h2>My Favourite Things</h2>
@@ -95,23 +147,43 @@
           <cite>by <span class="author">Kobayashi Issa</span></cite>
         </p>
         <h3>Public Domain Audiobook</h3>
-        <audio src="http://www.archive.org/download/mozartsyouth_2106_librivox/mozartsyouth_02_hoffmann_64kb.mp3" controls>
-        <a href="https://librivox.org/author/16108?primary_key=16108&search_category=author&search_page=1&search_form=get_results">Audio book Download</a>
+        <audio
+          src="http://www.archive.org/download/mozartsyouth_2106_librivox/mozartsyouth_02_hoffmann_64kb.mp3"
+          controls
+        >
+          <a
+            href="https://librivox.org/author/16108?primary_key=16108&search_category=author&search_page=1&search_form=get_results"
+            >Audio book Download</a
+          >
         </audio>
         <h3>Youtube Video</h3>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/ehZePNP_w4I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="youtube-video">
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/ehZePNP_w4I"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </div>
       </main>
       <footer>
-        <hr>
+        <hr />
         <blockquote>
           "The quickest way to double your money is to fold it over and put it
           back in your pocket."<br /><cite
-            >&#8212;<span class="author">Will Rogers</span></cite>
+            >&#8212;<span class="author">Will Rogers</span></cite
+          >
         </blockquote>
         <p>
           &#169; 2020
-          <a href="mailto:21027619@saultcollege.ca?subject=Message%20from%20CSD120%20Website">
-            Noah Strum</a>
+          <a
+            href="mailto:21027619@saultcollege.ca?subject=Message%20from%20CSD120%20Website"
+          >
+            Noah Strum</a
+          >
         </p>
         <picture>
           <source type="image/svg+xml" srcset="images/sc-logo.svg" />
@@ -121,8 +193,10 @@
             srcset="
               images/sc-logo.png,
               images/sc-logo@1.5x 1.5x,
-              images/sc-logo@2x 2x"
-            width="70"/>
+              images/sc-logo@2x   2x
+            "
+            width="70"
+          />
         </picture>
       </footer>
       <a href="#top" title="Back to top">◤</a>
