--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
       </header>
       <main>
         <h1>Welcome to Noah Strum's Website!</h1>
+        <div class="bio">
         <a href="images/my-dog.jpg">
           <img
+          class="my-dog-walking"
             src="images/my-dog-150w.jpg"
             alt="My dog walking"
             sizes="(max-width:500px) 150px, 300px"
@@ -126,6 +128,7 @@
             </tr>
           </tfoot>
         </table>
+        </div>
         <h2>My Favourite Things</h2>
         <figure>
           <a href="https://www.tesla.com/">
