--- a/index.html
+++ b/index.html
@@ -45,89 +45,91 @@
             <li><a href="links.html">Links</a></li>
             <li><a href="glossary.html">Glossary</a></li>
             <li><a href="survey.html">Survey</a></li>
+            <li><a href="lorem.html">Lorem lpsum</a></li>
           </ul>
         </nav>
       </header>
       <main>
         <h1>Welcome to Noah Strum's Website!</h1>
         <div class="bio">
-        <a href="images/my-dog.jpg">
-          <img
-          class="my-dog-walking"
-            src="images/my-dog-150w.jpg"
-            alt="My dog walking"
-            sizes="(max-width:500px) 150px, 300px"
-            srcset="images/my-dog-150w.jpg 150w, images/my-dog-300w.jpg 300w"
-          />
-        </a>
-        <p>
-          My name is Noah Strum, and I was born and raised in Sault Ste. Marie
-          Ontario. I’m currently going to school for Computer Programming at
-          Sault College. The reason I chose Computer Programming was because I
-          am very interested in it. My high school Computer Programming teacher
-          also said I should take this program because I have talent.
-        </p>
-        <p>
-          In my spare time I enjoy playing video games and camping. My favorite
-          video game right now is Ark: Survival Evolved and Call of Duty
-          Warzone. I have a dog named Leo; he is a German Shepherd Doberman mix.
-          I have also been working part time for the last two years at subway.
-        </p>
-        <table>
-          <caption>
-            Table 1. Current Courses
-          </caption>
-          <thead>
-            <tr>
-              <th rowspan="2" scope="col">Term</th>
-              <th colspan="3" scope="colgroup">Course</th>
-            </tr>
-            <tr>
-              <th scope="col">Code</th>
-              <th scope="col">Name</th>
-              <th scope="col">Hrs/Week</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <th rowspan="6" scope="rowgroup">Fall</th>
-              <td>CSD111</td>
-              <td>Computing Environments</td>
-              <td>3</td>
-            </tr>
-            <tr>
-              <td>CSD112</td>
-              <td>Intro to Web Development</td>
-              <td>4</td>
-            </tr>
-            <tr>
-              <td>MTH123</td>
-              <td>Computer Math</td>
-              <td>3</td>
-            </tr>
-            <tr>
-              <td>TNY130</td>
-              <td>Technology/Society</td>
-              <td>2</td>
-            </tr>
-            <tr>
-              <td>CSD110</td>
-              <td>Intro to Programming</td>
-              <td>4</td>
-            </tr>
-            <tr>
-              <td>CMM115</td>
-              <td>Communications 1</td>
-              <td>2</td>
-            </tr>
-          </tbody>
-          <tfoot>
-            <tr>
-              <th colspan="3" scope="row">Total</th>
-              <td>18</td>
-            </tr>
-          </tfoot>
-        </table>
+          <a href="images/my-dog.jpg">
+            <img
+              class="my-dog-walking"
+              src="images/my-dog-150w.jpg"
+              alt="My dog walking"
+              sizes="(max-width:500px) 150px, 300px"
+              srcset="images/my-dog-150w.jpg 150w, images/my-dog-300w.jpg 300w"
+            />
+          </a>
+          <p>
+            My name is Noah Strum, and I was born and raised in Sault Ste. Marie
+            Ontario. I’m currently going to school for Computer Programming at
+            Sault College. The reason I chose Computer Programming was because I
+            am very interested in it. My high school Computer Programming
+            teacher also said I should take this program because I have talent.
+          </p>
+          <p>
+            In my spare time I enjoy playing video games and camping. My
+            favorite video game right now is Ark: Survival Evolved and Call of
+            Duty Warzone. I have a dog named Leo; he is a German Shepherd
+            Doberman mix. I have also been working part time for the last two
+            years at subway.
+          </p>
+          <table>
+            <caption>
+              Table 1. Current Courses
+            </caption>
+            <thead>
+              <tr>
+                <th rowspan="2" scope="col">Term</th>
+                <th colspan="3" scope="colgroup">Course</th>
+              </tr>
+              <tr>
+                <th scope="col">Code</th>
+                <th scope="col">Name</th>
+                <th scope="col">Hrs/Week</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th rowspan="6" scope="rowgroup">Fall</th>
+                <td>CSD111</td>
+                <td>Computing Environments</td>
+                <td>3</td>
+              </tr>
+              <tr>
+                <td>CSD112</td>
+                <td>Intro to Web Development</td>
+                <td>4</td>
+              </tr>
+              <tr>
+                <td>MTH123</td>
+                <td>Computer Math</td>
+                <td>3</td>
+              </tr>
+              <tr>
+                <td>TNY130</td>
+                <td>Technology/Society</td>
+                <td>2</td>
+              </tr>
+              <tr>
+                <td>CSD110</td>
+                <td>Intro to Programming</td>
+                <td>4</td>
+              </tr>
+              <tr>
+                <td>CMM115</td>
+                <td>Communications 1</td>
+                <td>2</td>
+              </tr>
+            </tbody>
+            <tfoot>
+              <tr>
+                <th colspan="3" scope="row">Total</th>
+                <td>18</td>
+              </tr>
+            </tfoot>
+          </table>
         </div>
         <h2>My Favourite Things</h2>
         <figure>
