--- a/links.html
+++ b/links.html
@@ -18,17 +18,34 @@
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/normalize.css" />
+    <link rel="stylesheet" href="styles/main.css" />
     <!--Fonts-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Righteous&display=swap"
+      rel="stylesheet"
+    />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
-    <ul style=></style>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      main ul {
+        padding: 0;
+      }
+      main li {
+        padding-left: 1em;
+        background-image: url(images/link.png);
+        background-size: 10px 10px;
+        background-repeat: no-repeat;
+        background-position: left center;
+      }
+    </style>
     <!--Found Me!-->
   </head>
   <body>
@@ -40,6 +57,7 @@
             <li><a href="links.html">Links</a></li>
             <li><a href="glossary.html">Glossary</a></li>
             <li><a href="survey.html">Survey</a></li>
+            <li><a href="lorem.html">Lorem lpsum</a></li>
           </ul>
         </nav>
       </header>
@@ -50,13 +68,17 @@
             <a
               href="https://validator.w3.org/nu/"
               title="HTML Validator"
-              target="_blank">HTML Validator</a>
+              target="_blank"
+              >HTML Validator</a
+            >
           </li>
           <li>
             <a
               href="https://realfavicongenerator.net/"
               title="Favicon Generator"
-              target="_blank">Favicon Generator</a>
+              target="_blank"
+              >Favicon Generator</a
+            >
           </li>
         </ul>
       </main>
