--- a/survey.html
+++ b/survey.html
@@ -18,16 +18,22 @@
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/normalize.css" />
+    <link rel="stylesheet" href="styles/main.css" />
     <!--Fonts-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Righteous&display=swap"
+      rel="stylesheet"
+    />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap"
+      rel="stylesheet"
+    />
     <!--Found Me!-->
   </head>
   <body>
@@ -39,6 +45,7 @@
             <li><a href="links.html">Links</a></li>
             <li><a href="glossary.html">Glossary</a></li>
             <li><a href="survey.html">Survey</a></li>
+            <li><a href="lorem.html">Lorem lpsum</a></li>
           </ul>
         </nav>
       </header>
@@ -47,23 +54,32 @@
         <form
           name="lab_4_form"
           method="post"
-          action="https://formspree.io/f/mqkwjvjn">
+          action="https://formspree.io/f/mqkwjvjn"
+        >
           <p>
             <label for="name_field"
               >What is your name?
-              <abbr title="required" aria-label="required">*</abbr></label>
+              <abbr title="required" aria-label="required">*</abbr></label
+            >
             <input id="name_field" type="text" name="name_field" required />
           </p>
           <p>
             <label for="email_field"
               >What is your email?
-              <abbr title="required" aria-label="required">*</abbr></label>
-            <input id="email_field" type="email" name="email_field" required/>
+              <abbr title="required" aria-label="required">*</abbr></label
+            >
+            <input id="email_field" type="email" name="email_field" required />
           </p>
           <p>
             <label for="best_whole_number"
-              >Which whole number is the best?</label>
-            <input id="best_whole_number" type="number" name="best_whole_number" min="1"/>
+              >Which whole number is the best?</label
+            >
+            <input
+              id="best_whole_number"
+              type="number"
+              name="best_whole_number"
+              min="1"
+            />
           </p>
           <p>
             <label for="best_day">Which day is best?</label>
@@ -72,7 +88,8 @@
           <p>
             <label for="best_bear"
               >Which bear is best?
-              <abbr title="required" aria-label="required">*</abbr></label>
+              <abbr title="required" aria-label="required">*</abbr></label
+            >
             <select name="best_bear" id="best_bear" required>
               <option value="" selected>&nbsp;</option>
               <option value="black">Black</option>
@@ -95,14 +112,26 @@
                 <label for="no">No</label>
               </li>
               <li>
-                <input type="radio" name="radio_buttons" value="?" id="?"checked />
+                <input
+                  type="radio"
+                  name="radio_buttons"
+                  value="?"
+                  id="?"
+                  checked
+                />
                 <label for="?">None of your business</label>
               </li>
             </ul>
           </fieldset>
           <p>
             <label for="life_meaning">What is the meaning of life?</label>
-            <textarea name="life_meaning" d="life_meaning" cols="50" rows="5" placeholder="Enter the correct answer here">
+            <textarea
+              name="life_meaning"
+              d="life_meaning"
+              cols="50"
+              rows="5"
+              placeholder="Enter the correct answer here"
+            >
             </textarea>
           </p>
           <p><button type="submit">Send</button></p>
@@ -113,12 +142,14 @@
         <blockquote>
           "The quickest way to double your money is to fold it over and put it
           back in your pocket."<br /><cite
-            >&#8212;<span class="author">Will Rogers</span></cite>
+            >&#8212;<span class="author">Will Rogers</span></cite
+          >
         </blockquote>
         <p>
           &#169; 2020
           <a
-            href="mailto:21027619@saultcollege.ca?subject=Message%20from%20CSD120%20Website">
+            href="mailto:21027619@saultcollege.ca?subject=Message%20from%20CSD120%20Website"
+          >
             Noah Strum
           </a>
         </p>
@@ -130,8 +161,10 @@
             srcset="
               images/sc-logo.png,
               images/sc-logo@1.5x 1.5x,
-              images/sc-logo@2x   2x"
-            width="70"/>
+              images/sc-logo@2x   2x
+            "
+            width="70"
+          />
         </picture>
       </footer>
       <a href="#top" title="Back to top">◤</a>
